--- a/views/account/verify2fa.pug
+++ b/views/account/verify2fa.pug
@@ -10,4 +10,4 @@ block content
         .form-group
           button.btn.btn-primary(type='submit')
             i.fa.fa-key
-            = _x("Check Code", "Check 2fa code")
+            span.ps-2= _x("Check Code", "Check 2fa code")
