--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -3,10 +3,9 @@ if user
     .navbar-header
       button.navbar-toggler.mr-2(type='button', data-toggle='collapse', data-target='.navbar-collapse')
         span.navbar-toggler-icon
-      a.navbar-brand(href='/')
-        i.fa.fa-cube
+      a.navbar-brand.ps-3(href='/')
         | Company
-    ul.nav.navbar-nav.ml-auto
+    ul.nav.navbar-nav.ms-auto
       li.nav-item
         .btn-group
           .dropdown
