--- a/views/home.pug
+++ b/views/home.pug
@@ -5,3 +5,4 @@ block content
         d.flex 
             a.btn.btn-link(href="/invoice" disabled) Invoice
             a.btn.btn-link(href="/organization") Organization
+            a.btn.btn-link(href="/product") Product
