--- a/views/manage/product.pug
+++ b/views/manage/product.pug
@@ -1,8 +1,10 @@
 //- 2019 BrightNightGames. All Rights Reserved
 
 extends ../layout
+include ../partials/tags.pug
 
 block header 
+  +tmpl_tags
   script#tmpl-table(type="x-tmpl-mustache")
     table.table.table-sm.table-hover.table-striped
       thead
@@ -94,10 +96,12 @@ block header
             label(for=`{{r}}_vatrate`)= _x("Vat rate","product vat rate")  
             input.form-control(type='number', step="0.1", min="0", value="{{vatrate}}" name='vatrate', id=`{{r}}_vatrate` placeholder="ex: 21%")
         
+            +input_tag
           .form-group.col-12
             label(for=`{{r}}_description`)= _x("Description...","product description")  
             textarea.w-100.form-control.md-textarea(name='description' id=`{{r}}_description`, rows="3"  placeholder=_x("Leave a comment...","comment the event"))
               | {{description}} 
+
         .form-group.row.d-flex.justify-content-end.mx-1
           button.btn(type='reset')= _x("Reset","Reset")  
           button.btn.btn-primary.ml-1(type='submit')= _x("Send","product Send")   
@@ -153,3 +157,4 @@ block footer
     // hello from ALPINE
     Alpine.start()
     customElements.define("app-product", require("app").widget.PTProductPanel)
+    customElements.define("app-tags", require("app").widget.PTTagInput)
