--- a/views/partials/tags.pug
+++ b/views/partials/tags.pug
@@ -25,6 +25,6 @@ mixin tmpl_tags
             | {{/tags}}
 mixin input_tag
     app-tags
-        label.control-label= _x("Tags", "News form Tags")
+        label.control-label= _x("Tags", "Form Tags input")
         input.form-control(name='tags', id='tags' value="{{tags}}")
         small.col-sm-3.control-label.text-muted(data-tooltip) Separate values with ","
