--- a/views/manage/invoice.pug
+++ b/views/manage/invoice.pug
@@ -61,7 +61,7 @@ block header
 block content 
   app-invoice
     #invoice-modal.modal.fade(tabindex="-1" role="dialog" data-backdrop="static")
-      .modal-dialog.modal-xl.modal-dialog-scrollable(role="document")
+      .modal-dialog.modal-fullscreen.modal-dialog-scrollable(role="document")
         .modal-content
           .modal-header
             ul#modal-tabs.nav.nav-tabs(role="tablist")
