--- a/views/manage/product.pug
+++ b/views/manage/product.pug
@@ -1,10 +1,13 @@
 //- 2019 BrightNightGames. All Rights Reserved
 
 extends ../layout
-include ../partials/tags.pug
+include ../partials/tags
+include ../partials/image
 
 block header 
   +tmpl_tags
+  +tmpl_image
+
   script#tmpl-table(type="x-tmpl-mustache")
     table.table.table-sm.table-hover.table-striped
       thead
@@ -67,31 +70,27 @@ block header
           .card.bg-light.p-1
             span.card-text {{#comment}}{{comment}}{{/comment}}{{^comment}}-{{/comment}}
   script#tmpl-form(type="x-tmpl-mustache")
-    .container
+    .container-flex
       form.form-horizontal(action="{{action}}", method='POST', autocomplete="off")
         input(type='hidden', name='_csrf', value="_csrf")
         input(type='hidden', name='id', value="{{_id}}")
 
         .row
           .col.col-12 
-            h5= _x("General","General")  
+            h5= _x("General","General")
+
+          .form-group.col-12
+            +input_image
+
           .form-group.col-12 
-            label= _x("Image","Product Image") 
-            input(type="hidden" name="image")
-            .col
-              .d-flex.justify-content-begin
-                img.preview(width='128', height='128')
-                .form-group.align-self-center 
-                  input.btn.btn-link(id=`{{r}}_logo` name="logo" type="file" accept=".png,.jpg,.jpeg" hidden)
-                  label.btn.btn-link(for=`{{r}}_logo`) 
-                    i.fa.fa-upload
-                    small.ps-2.form-text= _x("Upload Image","Upload Image")  
-          .form-group.col-md-6
             label(for=`{{r}}_name`)= _x("Name","product Name")  
             input.form-control(type='text', value="{{name}}" name='name', id=`{{r}}_name` placeholder="Name" required)
+          
+          .form-group.col-md-6
 
             label(for=`{{r}}_price`)= _x("Price","product price")  
             input.form-control(type='number', step="0.1", min="0", value="{{price}}" name='price', id=`{{r}}_price` placeholder="ex 12,00€")
+          .form-group.col-md-6
 
             label(for=`{{r}}_vatrate`)= _x("Vat rate","product vat rate")  
             input.form-control(type='number', step="0.1", min="0", value="{{vatrate}}" name='vatrate', id=`{{r}}_vatrate` placeholder="ex: 21%")
@@ -99,7 +98,7 @@ block header
           .form-group.col-12
             label(for=`{{r}}_description`)= _x("Description...","product description")  
             textarea.w-100.form-control.md-textarea(name='description' id=`{{r}}_description`, rows="3"  placeholder=_x("Leave a comment...","comment the event"))
-              | {{description}} 
+              |{{description}} 
             +input_tag
 
         .form-group.row.d-flex.justify-content-end.mx-1
@@ -158,3 +157,4 @@ block footer
     Alpine.start()
     customElements.define("app-product", require("app").widget.PTProductPanel)
     customElements.define("app-tags", require("app").widget.PTTagInput)
+    customElements.define("app-image", require("app").widget.PTImageInput)
