white buttons collapse/close

--- a/src/client/style/main.scss
+++ b/src/client/style/main.scss
@@ -8,8 +8,14 @@
         }
     }
     .btn {
-        --bs-btn-color: rgb(231, 231, 231)
+        --bs-btn-color: rgb(231, 231, 231);
     }
+
+    .btn-close,
+    .navbar-toggler-icon {
+        filter: invert(1)
+    }
+
     .navbar{
 
         --bs-navbar-color: rgba(231, 231, 231, 0.55);
